<package format="2">
  <name>environment</name>
  <version>1.0.0</version>
  <description>
    Unity asset bundle for my environment
  </description>
  <maintainer email="jonathan.r.fink3.civ@mail.mil">Jon Fink</maintainer>
  <author email="jonathan.r.fink3.civ@mail.mil">Jon Fink</author>
  <license>None</license>
  <license>ARL-Shared</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
